syntax = "proto3";
package slate;

service Cortex {
  // Flux
  rpc Focus(FocusRequest) returns (FocusResponse);
  rpc Drift(DriftRequest) returns (DriftResponse);

  // Echoes
  rpc Commit(Trace) returns (Ack);
  rpc Reminisce(RecallRequest) returns (RecallResponse);

  // Nexus
  rpc Consult(QueryRequest) returns (KnowledgeResponse);

  // Reflex
  rpc Trigger(ReflexRequest) returns (ExecutionResult);

  // Management
  rpc DeleteRun(RunRequest) returns (Ack);
}

message FocusRequest {
  string content = 1;
  string run_id = 2;
}

message FocusResponse {
  string id = 1;
}

message DriftRequest {
  string run_id = 1;
}

message DriftResponse {
  repeated FluxItem items = 1;
}

message FluxItem {
  string id = 1;
  string content = 2;
  float relevance = 3;
}

message Trace {
  string input = 1;
  string reasoning = 2;
  string action = 3;
  string outcome = 4;
  string agent_id = 5;
  repeated float embedding = 6;
  string run_id = 7;
}

message Ack {
  bool success = 1;
}

message RecallRequest {
  repeated float embedding = 1;
  uint64 limit = 2;
  string query_text = 3;
  string filter = 4;
  string run_id = 5;
}

message RecallResponse {
  repeated Trace traces = 1;
}

message QueryRequest {
  repeated float embedding = 1;
  uint64 limit = 2;
  string query_text = 3;
  string filter = 4;
  string run_id = 5;
}

message RunRequest {
  string run_id = 1;
}

message KnowledgeResponse {
  repeated Fact facts = 1;
}

message Fact {
  string id = 1;
  string content = 2;
  string source = 3;
}

message ReflexRequest {
  string skill_name = 1;
}

message ExecutionResult {
  int32 result = 1;
}
